add new article

--- a/article/200216/index.html
+++ b/article/200216/index.html
@@ -20,12 +20,12 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Китайские боевые искусства в современном мире</title>
+  <title>Китайские боевые искусства в современном мире — Часть 1</title>
   <meta content="Сян джен — дословно переводится с китайского — похож на настоящее — символ. Это базовый элемент китайской культуры и искусства Он незримо присутствует в повседневной жизни простых людей и в великих творениях художников, поэтов и музыкантов древности..."
         name="description"/>
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://kungfu.com.ua/article/200216/" />
-  <meta property="og:title" content="Китайские боевые искусства в современном мире" />
+  <meta property="og:title" content="Китайские боевые искусства в современном мире — Часть 1" />
   <meta property="og:image" content="https://kungfu.com.ua/photo/article/3.jpg" />
   <meta property="og:image:width" content="3648"/>
   <meta property="og:image:height" content="2736"/>
@@ -34,7 +34,7 @@
   <link rel="image_src" href="https://kungfu.com.ua/photo/article/3.jpg" />
   <meta property="og:description" content="Сян джен — дословно переводится с китайского — похож на настоящее — символ. Это базовый элемент китайской культуры и искусства Он незримо присутствует в повседневной жизни простых людей и в великих творениях художников, поэтов и музыкантов древности..." />
   <meta name="twitter:description" content="Сян джен — дословно переводится с китайского — похож на настоящее — символ. Это базовый элемент китайской культуры и искусства Он незримо присутствует в повседневной жизни простых людей и в великих творениях художников, поэтов и музыкантов древности...">
-  <meta name="twitter:title" content="Китайские боевые искусства в современном мире" />
+  <meta name="twitter:title" content="Китайские боевые искусства в современном мире — Часть 1" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="canonical" href="https://kungfu.com.ua/article/200216/"/>
   <link rel="author" href="https://www.facebook.com/profile.php?id=100001753134734" />
@@ -145,7 +145,7 @@
             </ul>
           </div>
           <div id="content">
-            <h1 class="h1Title">Китайские боевые искусства в современном мире</h1>
+            <h1 class="h1Title">Китайские боевые искусства в современном мире — Часть 1</h1>
             <div data-allowfullscreen="native"
                  data-width="756px"
                  class="fotorama">
