--- a/article/index.html
+++ b/article/index.html
@@ -132,8 +132,14 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200308/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 2</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/200216/">
-                  <span class="list__text">Китайские боевые искусства в современном мире</span>
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 1</span>
                 </a>
               </li>
               <li class="list__item" >
