--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200308/">
+                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 2</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/practice/chinese_tea_ceremony/200222/">
                   <span class="list__text">(Анонс) 20.02.22 — Китайская чайная церемония — Даоские практики обращения к духовным сущностям</span>
                 </a>
@@ -212,7 +218,7 @@
               <li class="list__item" >
                 <a class="link"
                    href="/article/200216/">
-                  <span class="list__text">Статья — Китайские боевые искусства в современном мире</span>
+                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 1</span>
                 </a>
               </li>
               <li class="list__item" >
