--- a/article/index.html
+++ b/article/index.html
@@ -132,6 +132,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200410/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 3</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/200308/">
                   <span class="list__text">Китайские боевые искусства в современном мире — Часть 2</span>
                 </a>
