--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/200410/">
+                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 3</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/200308/">
                   <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 2</span>
                 </a>
