--- a/article/index.html
+++ b/article/index.html
@@ -132,14 +132,14 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
-                   href="/article/200410/">
-                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 3</span>
+                   href="/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html">
+                  <span class="list__text">Связь китайской культуры с традиционными школами боевых искусств</span>
                 </a>
               </li>
               <li class="list__item" >
                 <a class="link"
-                   href="/article/200308/">
-                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 2</span>
+                   href="/article/symbolism_in_the_martial_arts_of_China.html">
+                  <span class="list__text">Символизм в боевых искусствах Китая</span>
                 </a>
               </li>
               <li class="list__item" >
@@ -150,14 +150,20 @@
               </li>
               <li class="list__item" >
                 <a class="link"
-                   href="/article/the_link_between_Chinese_culture_and_traditional_martial_arts_schools.html">
-                  <span class="list__text">Связь китайской культуры с традиционными школами боевых искусств</span>
+                   href="/article/200308/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 2</span>
                 </a>
               </li>
               <li class="list__item" >
                 <a class="link"
-                   href="/article/symbolism_in_the_martial_arts_of_China.html">
-                  <span class="list__text">Символизм в боевых искусствах Китая</span>
+                   href="/article/200410/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 3</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/200530/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 4</span>
                 </a>
               </li>
             </ul>
