--- a/practice/chinese_tea_ceremony/index.html
+++ b/practice/chinese_tea_ceremony/index.html
@@ -139,7 +139,7 @@
                         <li class="list__item" >
                           <a class="link"
                              href="/practice/chinese_tea_ceremony/200222/">
-                            <span class="list__text">(Анонс) 20.02.22 — Даоские практики обращения к духовным сущностям</span>
+                            <span class="list__text">20.02.22 — Даоские практики обращения к духовным сущностям</span>
                           </a>
                         </li>
                         <li class="list__item" >
