--- a/practice/chinese_tea_ceremony/200222/index.html
+++ b/practice/chinese_tea_ceremony/200222/index.html
@@ -148,6 +148,16 @@
             <div style="text-align: center;">
               <iframe width="740" height="480" src="https://www.youtube.com/embed/83I77HoBtP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div id="disqus_thread"></div>
+            <script>
+              (function() {
+                var d = document, s = d.createElement('script');
+                s.src = 'https://kungfu-dojo.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+              })();
+            </script>
+            <noscript>Для комментариев необходим JavaScript</noscript>
           </div>
         </td>
         <td class="borderright">
