--- a/practice/chinese_tea_ceremony/200222/index.html
+++ b/practice/chinese_tea_ceremony/200222/index.html
@@ -31,8 +31,8 @@
   <meta name="twitter:image" content="https://kungfu.com.ua/photo/ceremony/200222.jpg">
   <meta property="vk:image" content="https://kungfu.com.ua/photo/ceremony/200222.jpg" />
   <link rel="image_src" href="https://kungfu.com.ua/photo/ceremony/200222.jpg" />
-  <meta property="og:description" content="Анонс предстоящей чайной церемонии на тему Даоские практики обращения к духовным сущностям" />
-  <meta name="twitter:description" content="Анонс предстоящей чайной церемонии на тему Даоские практики обращения к духовным сущностям">
+  <meta property="og:description" content="Чайная церемония на тему Даоские практики обращения к духовным сущностям" />
+  <meta name="twitter:description" content="Чайная церемония на тему Даоские практики обращения к духовным сущностям" />
   <meta name="twitter:title" content="Даоские практики обращения к духовным сущностям" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="canonical" href="https://kungfu.com.ua/practice/chinese_tea_ceremony/200222/"/>
