--- a/index.html
+++ b/index.html
@@ -88,15 +88,10 @@
            target="_blank">
           <img src="/asset/i/youtube.png" alt="Youtube канал"/>
         </a>
-        <a href="https://vk.com/club21359024"
-           data-action='{"category": "contact", "value": "vk", "label": "vk"}'
+        <a href="https://t.me/KungfuDojo"
+           data-action='{"category": "contact", "value": "telegram", "label": "telegram"}'
            target="_blank">
-          <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=100001753134734"
-           data-action='{"category": "contact", "value": "facebook", "label": "facebook"}'
-           target="_blank">
-          <img src="/asset/i/fb.png" alt="Страница Facebook"/>
+          <img src="/asset/i/telegram32.png" alt="telegram"/>
         </a>
       </div>
     </div>
@@ -198,27 +193,42 @@
               проектах, посвященных оздоровлению человека. Его деятельность освещалась телеканалами
               в&nbsp;программах посвященных здоровому образу жизни в которых подчеркивалась эффективность
               и простота в освоении этих древних технологий оздоровления.</p>
-            <h2 class="importantText">Обновления</h2>
-            <p>Подписывайтесь на <a data-action='{"category": "contact", "value": "telegram", "label": "messager"}'
-                                    target="_blank"
-                                    href="https://t.me/KungfuDojo">наш канал в Telegram<img src="/asset/i/telegram32.png" alt="telegram"/></a>, чтобы быть в курсе всех обновлений и предстоящий мероприятий.</p>
+            <h2 class="importantText">Статьи</h2>
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
-                   href="/article/200530/">
-                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 4</span>
-                </a>
-              </li>
-              <li class="list__item" >
-                <a class="link"
-                   href="/article/200410/">
-                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 3</span>
+                   href="/article/200216/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 1</span>
                 </a>
               </li>
               <li class="list__item" >
                 <a class="link"
                    href="/article/200308/">
-                  <span class="list__text">Статья — Китайские боевые искусства в современном мире — Часть 2</span>
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 2</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/200410/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 3</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/200530/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 4</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/chinese_martial_arts_in_the_modern_world_part_5/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 5</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/chinese_martial_arts_in_the_modern_world_part_6/">
+                  <span class="list__text">Китайские боевые искусства в современном мире — Часть 6</span>
                 </a>
               </li>
             </ul>
