--- a/practice/tai_chi_quan.html
+++ b/practice/tai_chi_quan.html
@@ -86,16 +86,11 @@
            target="_blank">
           <img src="/asset/i/youtube.png" alt="Youtube канал"/>
         </a>
-        <a href="https://vk.com/club21359024"
-           data-action='{"category": "contact", "value": "vk", "label": "vk"}'
-           target="_blank">
-          <img src="/asset/i/vk32.png" alt="Наш клуб ВКонтакте"/>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=100001753134734"
-           data-action='{"category": "contact", "value": "facebook", "label": "facebook"}'
-           target="_blank">
-          <img src="/asset/i/fb.png" alt="Страница Facebook"/>
-        </a>
+          <a href="https://t.me/KungfuDojo"
+             data-action='{"category": "contact", "value": "telegram", "label": "telegram"}'
+             target="_blank">
+              <img src="/asset/i/telegram32.png" alt="telegram"/>
+          </a>
       </div>
     </div>
   </div>
