--- a/article/index.html
+++ b/article/index.html
@@ -173,6 +173,12 @@
                   <span class="list__text">Китайские боевые искусства в современном мире — Часть 6</span>
                 </a>
               </li>
+              <li class="list__item" >
+                <a class="link"
+                   href="/article/ney_tuan/">
+                  <span class="list__text">Традиция в китайском боевом искусстве — Часть 2</span>
+                </a>
+              </li>
             </ul>
           </div>
         </td>
