--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
             <ul class="list">
               <li class="list__item" >
                 <a class="link"
+                   href="/article/ney_tuan/">
+                  <span class="list__text">Традиция в китайском боевом искусстве — Часть 2</span>
+                </a>
+              </li>
+              <li class="list__item" >
+                <a class="link"
                    href="/article/200216/">
                   <span class="list__text">Китайские боевые искусства в современном мире — Часть 1</span>
                 </a>
